[gd_scene load_steps=13 format=3 uid="uid://b5u28rwnuic14"]

[ext_resource type="Script" path="res://prefabs/TileScenes/Animal/Cashew.gd" id="1_mnkb6"]
[ext_resource type="Texture2D" uid="uid://b5lrsdx47wy8r" path="res://assets/character/beans/cashew_idle.png" id="2_ixjuc"]
[ext_resource type="Texture2D" uid="uid://cpdko4r3mvnmb" path="res://assets/character/beans/Cashew.png" id="3_gkai8"]
[ext_resource type="PackedScene" uid="uid://ck17xbn21yrd0" path="res://prefabs/Dialogue/DialoguePlayer/DialoguePlayer.tscn" id="4_6q8k0"]
[ext_resource type="JSON" path="res://dialogue/Shopkeepers/Cashew.json" id="5_btwog"]
[ext_resource type="SpriteFrames" uid="uid://dbeco0nr52nk0" path="res://assets/UI/speechbubble.tres" id="6_d0nrl"]
[ext_resource type="Texture2D" uid="uid://byrcy5o0j142f" path="res://assets/UI/speechbubble.png" id="7_mcs2q"]

[sub_resource type="Animation" id="Animation_jkf5a"]
resource_name = "fade"
length = 0.5

[sub_resource type="Animation" id="Animation_icl5u"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccjp3"]
_data = {
"fade": SubResource("Animation_jkf5a"),
"float": SubResource("Animation_icl5u")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msile"]
size = Vector2(70.5, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7qe2"]
atlas = ExtResource("7_mcs2q")
region = Rect2(90, 0, 18, 18)

[node name="Cashew" type="Area2D"]
z_index = 2
y_sort_enabled = true
script = ExtResource("1_mnkb6")
Idle = ExtResource("2_ixjuc")
Highlight = ExtResource("3_gkai8")

[node name="DialoguePlayer" parent="." instance=ExtResource("4_6q8k0")]
dialogue_file = ExtResource("5_btwog")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_ccjp3")
}

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ixjuc")

[node name="Bubble" type="AnimatedSprite2D" parent="Sprite"]
visible = false
position = Vector2(0, -10)
sprite_frames = ExtResource("6_d0nrl")
animation = &"Heart"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_msile")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -10)
texture = SubResource("AtlasTexture_c7qe2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
